[tool.setuptools]
py-modules = []

[project]
name = "stretch-funmap"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cma>=4.0.0",
    "cython>=3.0.11",
    "matplotlib>=3.10.0",
    "numba>=0.60.0",
    "numpy==1.23.2",
    "opencv-python>=4.7.0.72",
    "pyquaternion>=0.9.9",
    "pyyaml>=6.0.2",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "transforms3d>=0.4.2",
]
